sass/_gabersdorf.scss
/**
 * @file
 *
 * gemeinde-gabersdorf subtheme
 * base theme: ZEN 5
 * development server @localhost; 
 * drupal7zenmaster5
 *
 * author: criscom
 * date: 20130722 / 22. Juli 2013
 *
**/ 

// ======================================
// Body and general styles
// ======================================

* 
{
	@include bs;
	@include transition(all, .5s);
}

body 
{
	@include establish-baseline;
	@include adjust-font-size-to(12px);
	background-color: $color0;
	background-image: image-url('body_bg.png');
	background-size: 1400px 125px;
	background-repeat: repeat-x;
	color: $font;
	font-family: $font-body;
	//background-image: image-url('svg/body_bg.svg');
	background-position: 0 0;
}

::-moz-selection {
	background-color: $color0;
	text-shadow: none;
}

::selection {
	background-color: $color0;
	text-shadow: none;
}

#page {
	background-color: white;
}

#main {
	padding-top: 4em; // Positions the content area under the main menu
						// Node header should be positioned 1px below the main menu
	.lt-ie9 & {
		position: relative;
	}

	@include MQ(XLneg) { // aligns node heading under navigation. see aktuelles page
		.not-front & {
		padding-top: 8em;
		}

	}
	@include MQ(XS) { // iphone 288 - 479 px
		padding-top: 0em;
	}
}

#header, #content, #navigation, .region-sidebar-first, .region-sidebar-second, #footer {
	@include MQ(Mplus) {
	padding-right: 15px;
	padding-left: 15px;
	}
}

#content p {
	@extend %single-transition;
}

input, select, img {
	max-width: 100%;
	height: auto;
}

iframe {
	max-width: 100%;
}

a:link {
	@extend %single-transition;
}

// Links in paragraphs and lists
// p a:link, p a:visited, p a:hover, p a:active,
// p li a:link, p li a:visited, p li a:hover, p li a:active,
.column a:link, .column a:visited, .column a:active {
	color: $color1;
	&:hover {
		color: $color3;
		text-decoration: none;

	}
}
p a:hover, p li a:hover, p li a:hover, .download-file a:hover {
		color: white!important;
		background: $color1;
		text-decoration: none;
		padding: 2px 0;
}

.messages,
.messages-error,
.messages-warning,
.messages-status {
	background-repeat: no-repeat;
}

// Inhaltstyp Aktuelles
a.more-link
{
	display: block!important;
	text-align: left!important;
	&:hover {
		background: none;
		text-decoration: none;
		color: $color3!important;
		padding: 0;
	}
}

// ======================================
// Header section with Gemeinde Logo and Sublogos
// ======================================

//.header
[role="banner"],
// .lt-ie9 #header // For IE 8
 {
	//overflow: hidden;
	background: transparent image-url('header/header-ohne_bg.jpg') 15px 0px no-repeat;
	@include MQ(Splus) {
		height: 205px;
	}
	@include MQ(XLneg) { // removes white padding for wooden green header background on mobile devices
		background: transparent image-url('header/header-ohne_bg.jpg') 0px 0px no-repeat;
	}
	@include MQ(Sneg) {
		@include background-size(cover);
		margin-bottom: 5px;
	}
	// 24.07.2013
	// SVGs do not work in Safari and Chrome browsers at the momente (on localhost); various
	// workarounds have misfired and I am continuing with a jpg version.

	//background-image: image-url("svg/amazon-us.svg");
	// background-size: 100% 100%;
	// background-position: 0 0;
	// background-repeat: no-repeat;
	// height: 100px;
	// width: 100px;
	//background: transparent image-url('bg-sprites-s18f9313191.png') 15px 0px no-repeat;
	// @include background-size(cover);
	
	.no-svg & { // For browsers that don't support SVAs we load a png for the header thanks to modernizr
		// background: transparent image-url('header/header-mit-text-mit-wappen.png') 15px 0px no-repeat;
	}
	
}

.header__logo { // the logo is a blank transparent png in order to make the text section in the header clickable
	margin: 1em 0 0 2em;
	@include MQ(Mneg) {
		margin: 0.5em 0 1em;
	}
}

.header__site-name { // hiding the website name and slogan
	@include hide-text;
}

// Facebook, Address and Partner Logo block in Header
// ======================================

.header__region { // Block under header with FB icon, address and partner logos
	clear: both;
	@include MQ(Mneg) { // hiding block on smaller screensitzes <= 748px
		display: none;
	}
	@extend %left-border; // Aligning the FB icon with first main menu item 'Home' and node heading
		.block {
			@extend %inline-block;
			p {// removing margin on top of the adress text in order to move it further twd the header
				margin-top: 0;
			}
		}
		.first { // Aligning the address block
			margin-right: 2.6em;
		}
		.last { // pushing the partner logos to the right
			float: right;
			@extend %right-border;
		}
}



// Search form in Header block/region
// ======================================
[role="search"] { // positioning of search form
	float: right !important;
	padding-top: 7.3em;
	@extend %right-border;
	@include MQ(Mneg) {
		padding-top: 3.6em;
	}
	@include MQ(Sneg) {
		float: none !important;
		text-align: center;
		//float: left;
		// @extend %left-border;
	}
}


.block-search input[type="text"] {
	// height: 2em;
	padding: 5px 5px !important;
	border: 1px solid $color8;
	@include box-shadow(0px 0px 10px $color1 inset);
	color: lighten($font, 30%);
}

.form-actions {
	
	input[type="image"] {
		vertical-align: middle;
	}
}

// ======================================
// Main menu
// ======================================


#navigation // No padding for the main navigation so that the background can bleed
{

	.lt-ie9 & { // in IE7 the navigation needs to be aligned to the left
		position: absolute;
		top: 0;
		width: 100%;
	}
}

// Soft green background for the main menu
.region-navigation {
	// padding-left: .5em; // Aligning the first menu item 'Home' with node headings and FB icon
	//width: 100%;
	
}
/* ... */

